--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+spring.datasource.url=jdbc:postgresql://34.65.87.11:5432/webstarsdb
+spring.datasource.username=postgres
+spring.datasource.password=Sieglinde90
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
