--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "4.9.5",
-    "vite": "4.1.3",
+    "vite": "^4.3.9",
     "vite-plugin-checker": "0.5.5",
     "workbox-build": "6.5.4",
     "workbox-core": "6.5.4",
@@ -199,7 +199,7 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "e7f31c1be23da66c9632b284173867bf6f66fbbcedd9c79737ea06f38923e25c"
+    "hash": "e9b7135571492fd94d036db33281a6c3d10d7ba662aa9a083af9ac0ad1a27eb0"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
