--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
                     </exclusions>
                 </dependency>
 
+
             </dependencies>
             <build>
                 <plugins>
@@ -160,6 +161,11 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>appengine-maven-plugin</artifactId>
+                        <version>2.4.4</version>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -168,6 +174,11 @@
             <id>it</id>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>appengine-maven-plugin</artifactId>
+                        <version>2.4.4</version>
+                    </plugin>
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
@@ -188,6 +199,8 @@
                             </execution>
                         </executions>
                     </plugin>
+
+
 
                     <!-- Runs the integration tests (*IT) after the server is started -->
                     <plugin>
