--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.google.cloud.sql</groupId>
+                <artifactId>postgres-socket-factory</artifactId>
+                <version>1.12.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -48,6 +54,11 @@
             <groupId>com.vaadin</groupId>
             <!-- Replace artifactId with vaadin-core to use only free components -->
             <artifactId>vaadin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <artifactId>postgres-socket-factory</artifactId>
+            <version>1.12.0</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -63,6 +74,7 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
 
 
         <dependency>
@@ -110,6 +122,16 @@
                     <wait>500</wait>
                     <maxAttempts>240</maxAttempts>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>2.4.4</version>
+                <configuration>
+                    <projectId>webstars-389315</projectId>
+                    <version>GCLOUD_CONFIG</version>
+                </configuration>
+
             </plugin>
 
             <plugin>
