--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,7 +1,6 @@
 runtime: java
 env: flex
 runtime_config:
-  operating_system: ubuntu22
   runtime_version: 17
 handlers:
   - url: /.*
@@ -10,3 +9,6 @@ handlers:
 automatic_scaling:
   min_num_instances: 1
   max_num_instances: 7
+
+resources:
+  memory_gb: 2.0
