--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,8 @@ jobs:
       - cloudrun/deploy:
           platform: 'managed'
           image: 'gcr.io/$GOOGLE_PROJECT_ID/$CIRCLE_WORKFLOW_ID'
-          service-name: 'vaadin-ui-service'
-          region: 'europe-west6'
+          service-name: 'issue-tracking-application'
+          region: 'europe-west1'
           unauthenticated: true
 workflows:
   version: 2
