--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,6 @@ jobs:
           registry-url: "gcr.io"
           image: $CIRCLE_WORKFLOW_ID
           tag: "latest"
-          build-args: '--platform linux/amd64 -t {project-name}'
       - gcp-gcr/push-image:
           google-project-id: GOOGLE_PROJECT_ID
           image: $CIRCLE_WORKFLOW_ID
@@ -61,7 +60,7 @@ jobs:
       - cloudrun/deploy:
           platform: 'managed'
           image: 'gcr.io/$GOOGLE_PROJECT_ID/$CIRCLE_WORKFLOW_ID'
-          service-name: 'webstarsrun'
+          service-name: 'vaadin-ui-service'
           region: 'europe-west6'
           unauthenticated: true
 workflows:
