--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,14 @@ executors:
   gcloud-executor:
     docker:
       - image: google/cloud-sdk
+      - platform: linux/amd64
   machine-executor:
     machine: true
 jobs:
   build:
     docker:
       - image: maven:3.8.1-openjdk-17-slim
+      - platform: linux/amd64
     environment:
       MAVEN_CLI_OPTS: "--batch-mode"
     steps:
