--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,10 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
-spring.datasource.url=jdbc:postgresql://34.65.87.11:5432/webstarsdb
-spring.datasource.username=postgres
-spring.datasource.password=Sieglinde90
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
 
-
-
-spring.datasource.driverClassName=org.postgresql.Driver
-
-
-# Launch the default browser when starting the application in development mode d
+# Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
-
