--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
           image: $CIRCLE_WORKFLOW_ID
           registry-url: "gcr.io"
           tag: "latest"
+      - checkout
       - cloudrun/init
       - cloudrun/deploy:
           platform: 'managed'
