--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,13 +45,24 @@ jobs:
             echo 'export GOOGLE_CLOUD_KEYS=$(cat $HOME/gcloud-service-key.json)' >> $BASH_ENV
             echo 'export TAG=$CIRCLE_SHA1' >> $BASH_ENV
       - gcp-gcr/gcr-auth
+      - gcp-gcr/build-image:
+          dockerfile: Dockerfile
+          google-project-id: GOOGLE_PROJECT_ID
+          registry-url: "gcr.io"
+          image: $CIRCLE_WORKFLOW_ID
+          tag: "latest"
+      - gcp-gcr/push-image:
+          google-project-id: GOOGLE_PROJECT_ID
+          image: $CIRCLE_WORKFLOW_ID
+          registry-url: "gcr.io"
+          tag: "latest"
       - checkout
       - cloudrun/init
       - cloudrun/build:
-            tag: gcr.io/${GOOGLE_PROJECT_ID}
+            tag: gcr.io/$GOOGLE_PROJECT_ID/$CIRCLE_WORKFLOW_ID
       - cloudrun/deploy:
           platform: managed
-          image: gcr.io/${GOOGLE_PROJECT_ID}
+          image: gcr.io/$GOOGLE_PROJECT_ID/$CIRCLE_WORKFLOW_ID
           service-name: vaadin-ui-service
           region: europe-west6
           unauthenticated: true
