--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <!-- Project from https://start.vaadin.com/ -->
     <groupId>com.example.application</groupId>
-    <artifactId>flowcrmtutorial</artifactId>
+    <artifactId>webstars</artifactId>
     <name>flowcrmtutorial</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -40,12 +40,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>com.google.cloud.sql</groupId>
-                <artifactId>postgres-socket-factory</artifactId>
-                <version>1.12.0</version>
-            </dependency>
-
         </dependencies>
     </dependencyManagement>
 
@@ -56,11 +50,6 @@
             <artifactId>vaadin</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.cloud.sql</groupId>
-            <artifactId>postgres-socket-factory</artifactId>
-            <version>1.12.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
         </dependency>
@@ -69,21 +58,13 @@
             <artifactId>line-awesome</artifactId>
             <version>1.1.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.16</version>
             <scope>runtime</scope>
         </dependency>
 
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-
-
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -110,20 +91,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5334</jvmArguments>
-                    <wait>500</wait>
-                    <maxAttempts>240</maxAttempts>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
@@ -132,7 +110,15 @@
                     <projectId>webstars-389315</projectId>
                     <version>GCLOUD_CONFIG</version>
                 </configuration>
-
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5066</jvmArguments>
+                    <wait>500</wait>
+                    <maxAttempts>240</maxAttempts>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -166,8 +152,6 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
-
-
             </dependencies>
             <build>
                 <plugins>
@@ -184,11 +168,6 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>com.google.cloud.tools</groupId>
-                        <artifactId>appengine-maven-plugin</artifactId>
-                        <version>2.4.4</version>
-                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -201,6 +180,10 @@
                         <groupId>com.google.cloud.tools</groupId>
                         <artifactId>appengine-maven-plugin</artifactId>
                         <version>2.4.4</version>
+                        <configuration>
+                            <projectId>webstars-389315</projectId>
+                            <version>GCLOUD_CONFIG</version>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
@@ -222,8 +205,6 @@
                             </execution>
                         </executions>
                     </plugin>
-
-
 
                     <!-- Runs the integration tests (*IT) after the server is started -->
                     <plugin>
