ok wieder pwd direkt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 spring.datasource.url=jdbc:postgresql://34.65.87.11:5432/webstarsdb
 spring.datasource.username=postgres
-spring.datasource.password=${my.datasource.password}
+spring.datasource.password=Siglinde90
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
