--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mustache.check-template-location = false
 spring.datasource.url=jdbc:postgresql://34.65.87.11:5432/webstarsdb
 spring.datasource.username=postgres
 spring.config.additional-location=file:./password-config.properties
-spring.datasource.password=${my.datasource.password}
+spring.datasource.password=${MY_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
