--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
