--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 spring.datasource.url=jdbc:postgresql://34.65.87.11:5432/webstarsdb
 spring.datasource.username=postgres
-spring.config.additional-location=file:src/main/resources/password.txt
+spring.config.additional-location=file:src/main/resources/password.properties
 spring.datasource.password=${MY_DATASOURCE_PASSWORD:Sieglinde90}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
