--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 spring.datasource.url=jdbc:postgresql://34.65.87.11:5432/webstarsdb
 spring.datasource.username=postgres
-#spring.datasource.password=${MY_DATASOURCE_PASSWORD:MY_DATASOURCE_PASSWORD_LOCAL}
-spring.datasource.password=Sieglinde90
+spring.datasource.password=${MY_DATASOURCE_PASSWORD:Sieglinde90}
+#spring.datasource.password=Sieglinde90
 spring.config.additional-location=file:src/main/resources/password.properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
