offlinepage still buggy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.config.additional-location=file:src/main/resources/password.properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-
+#Servelet um offlinepage zu erlauben
+server.servlet.context-parameters.X-Frame-Options=SAMEORIGIN
 
 
 # Launch the default browser when starting the application in development mode
